--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-praw
-pipenv
-lxml
-bs4
+beautifulsoup4==4.6.3
+bs4==0.0.1
+html5lib==1.0.1
+lxml==4.2.5
+pipreqs==0.4.9
+praw==6.0.0
+prawcore==1.0.0
+psycopg2==2.7.6.1
+pylint==2.2.2
+requests==2.20.1
